tree-sitter-hyperql/grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      seq(
        choice(
          $.definition_statement,
          $.manipulation_statement,
          $.migration_statement,
          $.system_statement,
          $.batch_statement,
          $.transaction_statement,
        ),
        ";",
      ),

    // ==========================================
    // 1. Schema Definitions (DDL)
    // ==========================================

    definition_statement: ($) =>
      choice(
        $.define_namespace,
        $.define_enum,
        $.define_field,
        $.define_role,
        $.define_struct,
        $.define_trait,
        $.define_node,
        $.define_edge,
        $.define_index,
      ),

    define_enum: ($) =>
      seq(
        "DEFINE",
        "ENUM",
        field("name", $.identifier),
        "{",
        commaSepTrailing(field("value", $.identifier)),
        "}",
      ),

    define_role: ($) =>
      seq(
        "DEFINE",
        "ROLE",
        field("name", $.identifier),
        "ALLOWS",
        choice(
          // List of types, optionally followed by constraints
          seq(
            "[",
            commaSep1($.identifier),
            "]",
            optional($.constraint_block),
          ),
          // Single type with colon (New Syntax)
          seq($.identifier, ":", $.constraint_block),
          // Single type, optionally followed by constraints (Old Syntax fallback)
          seq($.identifier, optional($.constraint_block)),
        ),
      ),

    constraint_block: ($) =>
      seq(
        "{",
        "constraints",
        ":",
        choice(
          seq("[", commaSepTrailing($._expression), "]"),
          seq("{", commaSepTrailing($.named_constraint), "}"),
        ),
        "}",
      ),

    manipulation_statement: ($) => repeat1($._clause),

    _clause: ($) =>
      choice(
        $.import_clause,
        $.match_clause,
        $.match_path_clause,
        $.optional_match_clause,
        $.create_node_clause,
        $.create_edge_clause,
        $.merge_clause,
        $.merge_object_clause,
        $.set_clause,
        $.delete_clause,
        $.detach_delete_clause,
        $.remove_clause,
        $.with_clause,
        $.where_clause,
        $.return_clause,
        $.order_by_clause,
        $.limit_clause,
        $.skip_clause,
        $.group_by_clause,
        $.union_clause,
        $.unwind_clause,
      ),

    create_node_clause: ($) =>
      seq(
        "CREATE",
        "NODE",
        field("variable", $.identifier),
        ":",
        field("type", $.dotted_identifier),
        $.map_literal,
      ),

    _expression: ($) =>
      choice(
        $.identifier,
        $.inferred_identifier,
        $.variable,
        $._literal,
        $.function_call,
        $.list_predicate,
        $.property_access,
        $.binary_expression,
        $.unary_expression,
        $.postfix_expression,
        $.case_expression,
        $.if_expression,
        $.match_expression,
        $.subquery_expression,
        $.window_function,
        seq("(", $._expression, ")"),
      ),

    inferred_identifier: ($) => seq(".", $.identifier),

    binary_expression: ($) =>
      choice(
        prec.left(12, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(14, seq($._expression, choice("*", "/", "%"), $._expression)),
        prec.left(
          10,
          seq($._expression, choice("<", ">", "<=", ">="), $._expression),
        ),
        prec.left(15, seq($._expression, "??", $._expression)),
        prec.left(
          8,
          seq(
            $._expression,
            choice(
              "==",
              "=",
              "!=",
              "IS",
              "LIKE",
              "ILIKE",
              "MATCHES",
              "IMATCHES",
            ),
            $._expression,
          ),
        ),
        prec.left(6, seq($._expression, choice("&&", "AND"), $._expression)),
        prec.left(4, seq($._expression, choice("||", "OR"), $._expression)),
        prec.left(7, seq($._expression, "IN", $._expression)),
      ),

    property_assignment: ($) =>
      seq(field("name", $.identifier), "=", field("value", $._expression)),

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(token.immediate(prec(1, /[^\\"\n]+/)), $.escape_sequence),
        ),
        '"',
      ),

    integer_literal: ($) =>
      token(
        choice(
          /[0-9]+(_[0-9]+)*/,
          /0[xX][0-9a-fA-F]+(_[0-9a-fA-F]+)*/,
          /0[bB][01]+(_[01]+)*/,
          /0[oO][0-7]+(_[0-7]+)*/,
        ),
      ),

    map_literal: ($) =>
      seq(
        "{",
        commaSepTrailing(choice($.property_assignment, $.role_binding)),
        "}",
      ),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    dotted_identifier: ($) => seq($.identifier, repeat(seq(".", $.identifier))),
